...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="PZQ-kJ-VMq">
                                <rect key="frame" x="206" y="66" width="188" height="30"/>
                                <accessibility key="accessibilityConfiguration" hint="The textfiled in which you should insert your username" label="Enter your username here"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pasword" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mZC-hk-2wP">
                                <rect key="frame" x="239" y="207" width="123" height="30"/>
                                <accessibility key="accessibilityConfiguration" hint="The password of the customer" label="Password"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="aYR-gM-m1q"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WXO-fg-dZm">
                                <rect key="frame" x="206" y="483" width="188" height="30"/>
                                <accessibility key="accessibilityConfiguration" hint="The button which will process the user credentials" label="Login"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="0.08235294118" green="0.67450980390000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="CCi-BB-456">
                                <rect key="frame" x="211" y="24" width="178" height="210"/>
                                <accessibility key="accessibilityConfiguration" hint="This is the logo, if you are blind you probably dont care about this, it's shapped like an old greek thingy and it's blue" identifier="homelogo" label="Logo">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WHm-81-MjC">
                                <rect key="frame" x="20" y="524" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" hint="contactus button" identifier="contactUs" label="ContactUs"/>
                                <state key="normal" title="Contact Us">
                                    <color key="titleColor" red="0.08235294118" green="0.67450980390000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dg7-hK-fIG">
                                <rect key="frame" x="20" y="410" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" hint="This is the login button" identifier="loginButton" label="login button"/>
                                <state key="normal" title="Login into Internet Banking">
                                    <color key="titleColor" red="0.08235294118" green="0.67450980390000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Copyright of the Fraud Bank" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4k9-ab-Bjl">
                                <rect key="frame" x="20" y="562" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="copyrighthome"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="h9w-94-vxW"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fraud Bank Non-Profit Bank" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="26" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ll7-zQ-KK1">
                                <rect key="frame" x="175" y="164" width="257" height="21"/>
                                <constraints>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ph:+61000000000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cHY-ym-xDM">
                                        <rect key="frame" x="152" y="223" width="257" height="21"/>
                                        <constraints>
...
